Moves index.html to folder root

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 		A minimal template for using ES6 via Webpack/Babel
 	</p>
 
-	<script src="bundle.js"></script>
+	<script src="build/bundle.js"></script>
 </body>
 </html>
